# Book_Recommendation_System

./: BookReviews.py  Embeddings.py  Evaluation.py  GUI.py  Index.py  Main.py  Preprocessing.py  README.md  ReviewsWithMetadata.py  pyproject.toml
Previous_or_failed/: GUI_1st_Try.py  GUI_2_0.py  GUI_2_1.py  SQL.py
data_processing/: BookReviews.py  Embeddings.py  Index.py  Preprocessing.py  ReviewsWithMetadata.py
evaluation/: Evaluation.py  golden_dataset.csv
gui/: GUI.py
previous_or_failed/: GUI_1st_Try.py  GUI_2_0.py  GUI_2_1.py  Preprocessing.py
